--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,2 +1,67 @@
 .Navigation {
+  width: 676px;
+  margin: 0;
+  min-height: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Navigation__wrap {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 16px;
+}
+
+.Navigation__movies-link {
+  text-align: center;
+  margin: auto;
+  text-decoration: none;
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #fff;
+}
+
+.Navigation__movies-link_saved {
+  font-weight: 400;
+}
+
+.Navigation__profile-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 500;
+  color: #fff;
+}
+
+.Navigation__profile-icon-wrap {
+  width: 26px;
+  height: 30px;
+  border-radius: 4px;
+  margin-left: 17px;
+  display: flex;
+  background-color: #313131;
+}
+
+.Navigation__profile-icon {
+  width: 11.5px;
+  height: 14px;
+  margin: auto;
+}
+
+.Navigation__profile-button {
+  width: 76px;
+  height: 32px;
+  margin-top: auto;
+  margin-bottom: auto;
+  border: none;
+  border-radius: 3px;
+  background-color: #3ddc84;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 500;
+  color: #000;
 }
