--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -10,6 +10,13 @@
   color: #fff;
 }
 
+@media screen and (max-width: 830px) {
+  .AboutProject {
+    min-height: 585px;
+    padding: 0 50px;
+  }
+}
+
 .AboutProject__title {
   width: 50%;
   min-height: auto;
@@ -18,6 +25,12 @@
   line-height: 27px;
   font-weight: 400;
   color: #fff;
+}
+
+@media screen and (max-width: 830px) {
+  .AboutProject__title {
+    margin-top: 90px;
+  }
 }
 
 .AboutProject__line {
@@ -39,8 +52,20 @@
   min-height: 90px;
 }
 
+@media screen and (max-width: 830px) {
+  .AboutProject__column {
+    min-height: 124px;
+  }
+}
+
 .AboutProject__column:first-of-type {
   margin-right: 40px;
+}
+
+@media screen and (max-width: 830px) {
+  .AboutProject__column:first-of-type {
+    margin-right: 30px;
+  }
 }
 
 .AboutProject__column-subtitle {
@@ -59,12 +84,26 @@
   color: #fff;
 }
 
+@media screen and (max-width: 830px) {
+  .AboutProject__column-text {
+    margin-top: 22px;
+    font-size: 12px;
+    line-height: 18px;
+  }
+}
+
 .AboutProject__scale {
   width: 100%;
   display: grid;
   grid-template-rows: repeat(2, 36px);
   grid-template-columns: 1fr 4fr;
   margin: 110px 0;
+}
+
+@media screen and (max-width: 830px) {
+  .AboutProject__scale {
+    margin-top: 93px;
+  }
 }
 
 .AboutProject__scale-backend {
