--- a/src/components/HeaderInLanding/HeaderInLanding.css
+++ b/src/components/HeaderInLanding/HeaderInLanding.css
@@ -1,17 +1,22 @@
-.Header {
+.HeaderInLanding {
   background-color: #202020;
-  width: 100%;
   padding: 0 70px;
-  margin: 0;
+  width: 100%;
   min-height: 74px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  color: #fff;
 }
 
-.Header__signup-link {
+@media screen and (max-width: 830px) {
+  .HeaderInLanding {
+    padding: 0 30px;
+    background-color: #073042;
+  }
+}
+
+.HeaderInLanding__signup-link {
   text-align: center;
   margin: auto 0 auto auto;
   text-decoration: none;
@@ -21,7 +26,7 @@
   color: #fff;
 }
 
-.Header__signin-button {
+.HeaderInLanding__signin-button {
   width: 76px;
   height: 32px;
   margin-left: 30px;
@@ -35,10 +40,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.Header__wrap {
-  margin: 70px auto 40px;
-  width: 396px;
-  height: 38px;
 }
