--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -10,6 +10,13 @@
   color: #fff;
 }
 
+@media screen and (max-width: 830px) {
+  .Portfolio {
+    padding: 0 50px;
+    min-height: 470px;
+  }
+}
+
 .Portfolio__title {
   max-width: 250px;
   margin: 90px 0 50px;
@@ -17,6 +24,13 @@
   line-height: 20px;
   font-weight: 400;
   color: #8b8b8b;
+}
+
+@media screen and (max-width: 830px) {
+  .Portfolio__title {
+    margin-top: 80px;
+    color: #a0a0a0;
+  }
 }
 
 .Portfolio__links {
@@ -40,6 +54,12 @@
   color: #fff;
 }
 
+@media screen and (max-width: 830px) {
+  .Portfolio__link {
+    font-size: 28px;
+  }
+}
+
 .Portfolio__arrow {
   width: 29px;
   height: 60px;
@@ -48,9 +68,21 @@
   background-position: center;
 }
 
+@media screen and (max-width: 830px) {
+  .Portfolio__arrow {
+    width: 27px;
+  }
+}
+
 .Portfolio__line {
   width: 100%;
   height: 1px;
   margin: 9px 0 20px;
   background-color: #424242;
+}
+
+@media screen and (max-width: 830px) {
+  .Portfolio__line {
+    background-color: #e6e6e6;
+  }
 }
