--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,7 +1,27 @@
+.SearchForm {
+  min-height: 224px;
+  padding: 0 70px;
+}
+
+@media screen and (max-width: 830px) {
+  .SearchForm {
+    min-height: 232px;
+    padding: 0 30px;
+  }
+}
+
 .SearchForm__form {
   margin: 80px 0 0;
   display: flex;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 1080px) {
+  .SearchForm__form {
+    margin: 60px 0 0;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .SearchForm__input-wrap {
@@ -9,12 +29,17 @@
   max-width: 932px;
   min-height: 48px;
   width: 100%;
-  height: 100%;
   border: 1.5px solid #aaa;
   border-radius: 24px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+@media screen and (max-width: 1080px) {
+  .SearchForm__input-wrap {
+    max-width: 100%;
+  }
 }
 
 .SearchForm__input {
@@ -26,6 +51,12 @@
   height: 100%;
   outline: none;
   color: #8b8b8b;
+}
+
+@media screen and (max-width: 1080px) {
+  .SearchForm__input {
+    padding-left: 18px;
+  }
 }
 
 .SearchForm__find-button {
@@ -49,6 +80,14 @@
   color: #fff;
 }
 
+@media screen and (max-width: 1080px) {
+  .SearchForm__find-filter {
+    margin-top: 38px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .SearchForm__tumbler {
   min-width: 36px;
   height: 20px;
@@ -66,4 +105,10 @@
   margin: 83px 0 10px;
   background-color: #aaaaaa;
   opacity: 0.2;
+}
+
+@media screen and (max-width: 1080px) {
+  .SearchForm__line {
+    margin-top: 57px;
+  }
 }
