--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -17,6 +17,13 @@
   }
 }
 
+@media screen and (max-width: 520px) {
+  .AboutProject {
+    min-height: 641px;
+    padding: 0 18px;
+  }
+}
+
 .AboutProject__title {
   width: 50%;
   min-height: auto;
@@ -33,6 +40,14 @@
   }
 }
 
+@media screen and (max-width: 520px) {
+  .AboutProject__title {
+    margin-top: 70px;
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+
 .AboutProject__line {
   width: 100%;
   height: 1px;
@@ -40,31 +55,29 @@
   background-color: #dadada;
 }
 
-.AboutProject__wrap {
-  width: 100%;
-  margin: 0;
-  display: flex;
-  justify-content: space-between;
-}
-
-.AboutProject__column {
-  max-width: 550px;
-  min-height: 90px;
-}
-
-@media screen and (max-width: 830px) {
-  .AboutProject__column {
-    min-height: 124px;
+@media screen and (max-width: 520px) {
+  .AboutProject__line {
+    margin: 28px 0 60px;
   }
 }
 
-.AboutProject__column:first-of-type {
-  margin-right: 40px;
+.AboutProject__wrap {
+  width: 100%;
+  margin: 0;
+  column-count: 2;
+  column-gap: 40px;
 }
 
 @media screen and (max-width: 830px) {
-  .AboutProject__column:first-of-type {
-    margin-right: 30px;
+  .AboutProject__wrap {
+    column-gap: 30px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .AboutProject__wrap {
+    min-height: 328px;
+    column-count: 1;
   }
 }
 
@@ -74,6 +87,14 @@
   line-height: 24px;
   font-weight: 400;
   color: #fff;
+  letter-spacing: -0.04em;
+}
+
+@media screen and (max-width: 520px) {
+  .AboutProject__column-subtitle {
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
 
 .AboutProject__column-text {
@@ -92,17 +113,34 @@
   }
 }
 
+@media screen and (max-width: 520px) {
+  .AboutProject__column-text {
+    margin-top: 16px;
+    font-size: 11px;
+    line-height: 16px;
+    margin-bottom: 56px;
+  }
+}
+
 .AboutProject__scale {
   width: 100%;
   display: grid;
   grid-template-rows: repeat(2, 36px);
   grid-template-columns: 1fr 4fr;
-  margin: 110px 0;
+  margin-top: 110px;
 }
 
 @media screen and (max-width: 830px) {
   .AboutProject__scale {
     margin-top: 93px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .AboutProject__scale {
+    margin-top: 4px;
+    grid-template-rows: repeat(2, 35px);
+    grid-template-columns: 100px auto;
   }
 }
 
@@ -114,7 +152,14 @@
   font-size: 14px;
   line-height: 17px;
   font-weight: 400;
-  color: #fff;
+  color: #000;
+}
+
+@media screen and (max-width: 520px) {
+  .AboutProject__scale-backend {
+    font-size: 11px;
+    line-height: 13px;
+  }
 }
 
 .AboutProject__scale-frontend {
@@ -128,7 +173,14 @@
   color: #fff;
 }
 
-.AboutProject__scale-сaption {
+@media screen and (max-width: 520px) {
+  .AboutProject__scale-frontend {
+    font-size: 11px;
+    line-height: 13px;
+  }
+}
+
+.AboutProject__scale-caption {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -136,5 +188,18 @@
   font-size: 14px;
   line-height: 17px;
   font-weight: 400;
-  color: #fff;
+  color: #8b8b8b;
+}
+
+@media screen and (max-width: 830px) {
+  .AboutProject__scale-caption {
+    color: #a0a0a0;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .AboutProject__scale-caption {
+    font-size: 11px;
+    line-height: 13px;
+  }
 }
