--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -15,6 +15,14 @@
   }
 }
 
+@media screen and (max-width: 520px) {
+  .Auth {
+    padding: 0 30px;
+    width: 100%;
+    height: 636px;
+  }
+}
+
 .Auth__greeting {
   width: 100%;
   margin: 0 0 40px;
@@ -22,6 +30,13 @@
   line-height: 29px;
   font-weight: 500;
   color: #fff;
+}
+
+@media screen and (max-width: 520px) {
+  .Auth__greeting {
+    margin-bottom: 80px;
+    text-align: center;
+  }
 }
 
 .Auth__form {
@@ -33,51 +48,19 @@
   justify-content: space-between;
 }
 
+@media screen and (max-width: 520px) {
+  .Auth__form {
+    height: 468px;
+  }
+}
+
 .Auth__fieldset {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin: 0 0 69px;
+  margin: 0;
   padding: 0;
   border: none;
-}
-
-.Auth__input {
-  width: 366px;
-  height: 46px;
-  margin: 0;
-  padding: 0 15px;
-  border: none;
-  border-radius: 8px;
-  outline: none;
-  background-color: #2f2f2f;
-  font-family: inherit;
-  font-size: 13px;
-  line-height: 16px;
-  font-weight: 500;
-  color: #fff;
-}
-
-.Auth__input_type_error {
-  color: #ee3465;
-}
-
-.Auth__label {
-  margin: 0 0 10px;
-  font-size: 10px;
-  line-height: 12px;
-  font-weight: 400;
-  color: #8b8b8b;
-}
-
-.Auth__input-error {
-  padding-top: 10px;
-  font-size: 10px;
-  font-weight: 400;
-  line-height: 12px;
-  color: #ee3465;
-  display: block;
-  min-height: 10px;
 }
 
 .Auth__submit-button {
@@ -93,6 +76,13 @@
   font-weight: 500;
   line-height: 17px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 520px) {
+  .Auth__submit-button {
+    font-size: 12px;
+    line-height: 15px;
+  }
 }
 
 .Auth__submit-button_disabled {
@@ -113,6 +103,15 @@
   }
 }
 
+@media screen and (max-width: 520px) {
+  .Auth__auth-text {
+    margin-top: 14px;
+    margin-bottom: 30px;
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
+
 .Auth__link-text {
   font-size: 14px;
   font-weight: 400;
@@ -120,4 +119,11 @@
   color: #4285f4;
   padding-left: 6px;
   text-decoration: none;
+}
+
+@media screen and (max-width: 520px) {
+  .Auth__link-text {
+    font-size: 12px;
+    line-height: 15px;
+  }
 }
