--- a/src/components/Header/HeaderOnlyLogo/HeaderOnlyLogo.css
+++ b/src/components/Header/HeaderOnlyLogo/HeaderOnlyLogo.css
@@ -2,12 +2,22 @@
   box-sizing: border-box;
   background-color: #202020;
   margin: 70px auto 40px;
-  max-width: 396px;
+  width: 396px;
   height: 38px;
 }
 
 @media screen and (max-width: 830px) {
   .HeaderOnlyLogo {
     margin-top: 232px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .HeaderOnlyLogo {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 56px;
+    margin-bottom: 50px;
   }
 }
