--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -17,6 +17,13 @@
   }
 }
 
+@media screen and (max-width: 520px) {
+  .Portfolio {
+    padding: 0 14px;
+    min-height: 274px;
+  }
+}
+
 .Portfolio__title {
   max-width: 250px;
   margin: 90px 0 50px;
@@ -33,10 +40,25 @@
   }
 }
 
+@media screen and (max-width: 520px) {
+  .Portfolio__title {
+    margin-top: 90px;
+    margin-bottom: 20px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
+
 .Portfolio__links {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+@media screen and (max-width: 520px) {
+  .Portfolio__links {
+    margin-bottom: 70px;
+  }
 }
 
 .Portfolio__item {
@@ -52,11 +74,19 @@
   line-height: 50px;
   font-weight: 400;
   color: #fff;
+  letter-spacing: -0.04em;
 }
 
 @media screen and (max-width: 830px) {
   .Portfolio__link {
     font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .Portfolio__link {
+    font-size: 18px;
+    line-height: 28px;
   }
 }
 
@@ -74,6 +104,14 @@
   }
 }
 
+@media screen and (max-width: 520px) {
+  .Portfolio__arrow {
+    width: 18px;
+    height: 28px;
+    background-image: url('../../images/arrow-small.svg');
+  }
+}
+
 .Portfolio__line {
   width: 100%;
   height: 1px;
@@ -84,5 +122,11 @@
 @media screen and (max-width: 830px) {
   .Portfolio__line {
     background-color: #e6e6e6;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .Portfolio__line {
+    margin-top: 19px;
   }
 }
