--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -17,19 +17,40 @@
   }
 }
 
+@media screen and (max-width: 520px) {
+  .Techs {
+    padding: 0 18px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .Techs {
+    min-height: 651px;
+    background-color: #202020;
+  }
+}
+
 .Techs__title {
   width: 50%;
-  min-height: auto;
   margin: 100px 0 0 0;
   font-size: 22px;
   line-height: 27px;
   font-weight: 400;
   color: #fff;
+  letter-spacing: -0.04em;
 }
 
 @media screen and (max-width: 830px) {
   .Techs__title {
     margin-top: 90px;
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .Techs__title {
+    margin-top: 70px;
   }
 }
 
@@ -46,17 +67,34 @@
   }
 }
 
+@media screen and (max-width: 520px) {
+  .Techs__line {
+    margin-top: 28px;
+    margin-bottom: 60px;
+    background-color: #000;
+  }
+}
+
 .Techs__subtitle {
   font-size: 50px;
   line-height: 58px;
   font-weight: 400;
   color: #fff;
   margin: 0 auto 26px;
+  letter-spacing: -0.04em;
 }
 
 @media screen and (max-width: 830px) {
   .Techs__subtitle {
     margin-bottom: 22px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .Techs__subtitle {
+    margin-bottom: 24px;
+    font-size: 30px;
+    line-height: 36px;
   }
 }
 
@@ -68,12 +106,20 @@
   text-align: center;
   color: #fff;
   margin: 0 auto;
+  letter-spacing: -0.04em;
 }
 
 @media screen and (max-width: 830px) {
   .Techs__text {
     font-size: 12px;
     line-height: 18px;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .Techs__text {
+    font-size: 11px;
+    line-height: 16px;
   }
 }
 
@@ -91,13 +137,38 @@
 @media screen and (max-width: 830px) {
   .Techs__icons {
     margin-top: 83px;
-    padding: 0 10px;
+    margin-bottom: 90px;
     max-width: 648px;
   }
 }
 
+@media screen and (max-width: 680px) {
+  .Techs__icons {
+    margin-top: 70px;
+    grid-template-columns: repeat(4, 1fr);
+    max-width: 366px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .Techs__icons {
+    margin-top: 64px;
+    margin-bottom: 80px;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 272px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .Techs__icons {
+    margin-top: 50px;
+    margin-bottom: 70px;
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 178px;
+  }
+}
+
 .Techs__icon {
-  width: 100%;
   height: 60px;
   background-color: #303030;
   border-radius: 10px;
@@ -113,7 +184,6 @@
 
 @media screen and (max-width: 830px) {
   .Techs__icon {
-    width: 100%;
     height: 57px;
     font-size: 12px;
     line-height: 15px;
