--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -1,6 +1,6 @@
 .page {
   box-sizing: border-box;
-  background-color: #fff;
+  background-color: #202020;
   font-family: 'Inter', Arial, sans-serif;
   color: #000;
   min-width: 300px;
