--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -171,6 +171,11 @@
   line-height: 17px;
   font-weight: 500;
   color: #fff;
+  transition: 0.3s opacity;
+}
+
+.AboutMe__github-link:hover {
+  opacity: 0.7;
 }
 
 .AboutMe__photo {
