--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -75,7 +75,12 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 17px;
+  transition: 0.3s opacity;
+}
+
+.Auth__submit-button:hover {
   cursor: pointer;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 520px) {
@@ -87,6 +92,11 @@
 
 .Auth__submit-button_disabled {
   background-color: #2f2f2f;
+}
+
+.Auth__submit-button_disabled:hover {
+  opacity: 1;
+  cursor: default;
 }
 
 .Auth__auth-text {
@@ -119,6 +129,11 @@
   color: #4285f4;
   padding-left: 6px;
   text-decoration: none;
+  transition: 0.3s opacity;
+}
+
+.Auth__link-text:hover {
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 520px) {
