--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -118,6 +118,11 @@
   line-height: 16px;
   font-weight: 400;
   color: #fff;
+  transition: 0.3s opacity;
+}
+
+.Footer__link:hover {
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 520px) {
