--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -24,6 +24,11 @@
   line-height: 16px;
   font-weight: 500;
   color: #fff;
+  transition: 0.3s opacity;
+}
+
+.NavTab__link:hover {
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 520px) {
