--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -33,10 +33,20 @@
   line-height: 18px;
   font-weight: 400;
   color: #fff;
+  transition: 0.3s opacity;
+}
+
+.Navigation__movies-link:hover {
+  opacity: 0.7;
 }
 
 .Navigation__movies-link_active {
   font-weight: 500;
+}
+
+.Navigation__movies-link_active:hover {
+  opacity: 1;
+  cursor: default;
 }
 
 .Navigation__profile-link {
@@ -47,6 +57,11 @@
   line-height: 16px;
   font-weight: 500;
   color: #fff;
+  transition: 0.3s opacity;
+}
+
+.Navigation__profile-link:hover {
+  opacity: 0.7;
 }
 
 .Navigation__profile-icon-wrap {
