--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -119,6 +119,11 @@
   font-weight: 400;
   text-align: center;
   color: #fff;
+  transition: 0.3s opacity;
+}
+
+.Profile__edit-button:hover {
+  opacity: 0.7;
   cursor: pointer;
 }
 
@@ -144,6 +149,11 @@
   color: #ee3465;
   text-decoration: none;
   text-align: center;
+  transition: 0.3s opacity;
+}
+
+.Profile__logout-button:hover {
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 830px) {
