--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -86,6 +86,11 @@
   margin: 0 7px 0 46px;
   background-image: url(../../images/find.svg);
   cursor: pointer;
+  transition: 0.3s opacity;
+}
+
+.SearchForm__find-button:hover {
+  opacity: 0.8;
 }
 
 .SearchForm__find-filter {
@@ -123,6 +128,11 @@
   background-image: url(../../images/smalltumb.svg);
   background-repeat: no-repeat;
   cursor: pointer;
+  transition: 0.3s opacity;
+}
+
+.SearchForm__tumbler:hover {
+  opacity: 0.8;
 }
 
 .SearchForm__line {
