--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,7 +1,7 @@
 .Promo {
   box-sizing: border-box;
   background-color: #073042;
-  background-image: url('../../images/pic__COLOR_landing-logo.svg');
+  background-image: url('../../images/landing-logo.svg');
   background-repeat: no-repeat;
   background-size: 320px;
   background-position: 50% 82px;
