--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -2,8 +2,8 @@
   box-sizing: border-box;
   background-color: #202020;
   width: 396px;
-  height: 552px;
-  margin: 0 auto;
+  height: 630px;
+  margin: 70px auto 0;
   display: flex;
   flex-direction: column;
   color: #fff;
@@ -11,21 +11,24 @@
 
 @media screen and (max-width: 830px) {
   .Auth {
-    height: 714px;
+    margin-top: 232px;
+    height: 792px;
   }
 }
 
 @media screen and (max-width: 520px) {
   .Auth {
+    margin-top: 56px;
     padding: 0 30px;
     width: 100%;
-    height: 636px;
+    height: 724px;
+    align-items: center;
   }
 }
 
 .Auth__greeting {
   width: 100%;
-  margin: 0 0 40px;
+  margin: 40px 0;
   font-size: 24px;
   line-height: 29px;
   font-weight: 500;
@@ -34,6 +37,7 @@
 
 @media screen and (max-width: 520px) {
   .Auth__greeting {
+    margin-top: 50px;
     margin-bottom: 80px;
     text-align: center;
   }
