добавить useLocation - реализовать изменение фона хэдера на лендинге, убрать лишний уровень для рендера футера

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,12 +12,17 @@
 @media screen and (max-width: 830px) {
   .Header {
     padding: 0 30px;
-    background-color: #073042;
   }
 }
 
 @media screen and (max-width: 520px) {
   .Header {
     padding: 0 14px;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .Header_inLanding {
+    background-color: #073042;
   }
 }
